Fix horizontal overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ html, body {
 	padding: 0;
 	font-size: 1rem;
 	background: url("../Images/bg-white-tex.jpg");
-	overflow-x: hidden;
 }
 
 
